--- a/index.html
+++ b/index.html
@@ -12,9 +12,20 @@
 <body>
 
     <div class="container">
-        <p>Work by Ajax by radshodam</p>
-        <button id="button">Load Ajax</button>
-        <div id="output"></div>
+        <div class="col-6">
+            <p>Work by Ajax by radshodam</p>
+            <button id="button">Load Ajax</button>
+            <div id="output"></div>
+        </div>
+        <div class="col-6">
+            <button id="BtnNew">new btn</button>
+            <p id="output2" style="color: burlywood;">
+
+            </p>
+
+
+        </div>
+
     </div>
 
     <script src="app.js"></script>
